// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeekViewMenuBarItem renders with no rehearsals 1`] = `
<div
  className="ui list"
  role="list"
>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="description"
    >
      S
    </div>
    <h3
      className="header"
    >
      7
    </h3>
    <i
      aria-hidden="true"
      className="grey circle tiny icon"
    />
  </div>
</div>
`;

exports[`WeekViewMenuBarItem renders with rehearsals 1`] = `
<div
  className="ui list"
  role="list"
>
  <div
    className="item"
    data-value={undefined}
    onClick={[Function]}
    role="listitem"
  >
    <div
      className="description"
    >
      T
    </div>
    <h3
      className="header"
    >
      16
    </h3>
    <i
      aria-hidden="true"
      className="blue circle tiny icon"
    />
  </div>
</div>
`;
